--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,12 +1,8 @@
 <h1>Stupid coach</h1>
 
 <div class="container">
-    <form action="ask" method="get">
+    <form action="answer" method="get">
     <input type="text" name="ask" placeholder="ask question">
     <input type="submit" value="Ask!">
   </form>
-</div>
-
-<div class="container">
-  <p><%=@answer%></p>
 </div>
