--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,5 +1,5 @@
 <h1>Stupid coach</h1>
-<p>your question:</p>
+<p>Ask your coach anything</p>
 <p><strong><%=@ask%></strong></p>
 <p>your answer:</p>
 <p><strong><%=@answer%></strong><p>
